<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
>
  <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
  >
    <View
      android:id="@+id/centerView"
      android:layout_width="0dp"
      android:layout_height="0dp" 
      android:layout_centerInParent="true"
    />
    <Button
      android:id="@+id/buttonSelectServer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"
      android:layout_alignRight="@id/centerView"
      android:text="@string/button_select"
      android:onClick="selectServer" 
    />
    <Button
      android:id="@+id/buttonCancelResult"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
      android:layout_toRightOf="@id/buttonSelectServer"
      android:text="@string/button_cancel"
      android:onClick="cancelResult" 
    />
    <TextView
      android:id="@+id/textTentativeName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/buttonSelectServer"
      android:text="@string/label_name"
    />
    <EditText
      android:id="@+id/editTentativeName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/textTentativeName"
      android:layout_alignLeft="@id/textTentativeName"
      android:layout_alignRight="@id/textTentativeName"
      android:inputType="text" 
      android:text=""
      android:focusable="false"
      android:textColor="#7f7f7f"
    />
    <TextView
      android:id="@+id/textTentativeHost"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/editTentativeName"
      android:layout_alignLeft="@id/editTentativeName"
      android:layout_toLeftOf="@+id/textTentativePort"
      android:text="@string/label_host"
    />
    <TextView
      android:id="@id/textTentativePort"
      android:layout_width="96dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/editTentativeName"
      android:layout_alignRight="@id/editTentativeName"
      android:text="@string/label_port"
    />
    <EditText
      android:id="@+id/editTentativeHost"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/textTentativeHost"
      android:layout_alignLeft="@id/textTentativeHost"
      android:layout_alignRight="@id/textTentativeHost"
      android:inputType="text" 
      android:text=""
    />
    <EditText
      android:id="@+id/editTentativePort"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/textTentativePort"
      android:layout_alignLeft="@id/textTentativePort"
      android:layout_alignRight="@id/textTentativePort"
      android:inputType="number" 
      android:text=""
    />
    <Button
      android:id="@+id/buttonStartScan"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/editTentativeHost"
      android:layout_alignParentLeft="true"
      android:layout_alignRight="@id/centerView"
      android:text="@string/button_start_scanning"
      android:onClick="startScan" 
    >
    </Button>
    <Button
      android:id="@+id/buttonStopScan"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/editTentativeHost"
      android:layout_alignParentRight="true"
      android:layout_toRightOf="@id/buttonStartScan"
      android:text="@string/button_stop_scanning"
      android:onClick="stopScan" 
    />
    <ProgressBar
      android:id="@+id/progressBarScan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/buttonStartScan"
      style="@android:style/Widget.ProgressBar.Horizontal"
      android:max="256"
    />
    <LinearLayout
      android:id="@+id/linearLayoutReadyZones"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/progressBarScan"
      android:layout_alignParentBottom="true"
    >
    </LinearLayout>
  </RelativeLayout>
</ScrollView>

