<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
>
  <TextView
    android:id="@+id/textLowLatency"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:text=""
  />
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_alignParentTop="true"
    android:layout_above="@id/textLowLatency"
    android:padding="15dp"
  >
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    >
      <View
        android:id="@+id/centerView"
        android:layout_width="0dp"
        android:layout_height="0dp" 
        android:layout_centerInParent="true"
      />
      <Button
        android:id="@+id/buttonSelectTransmitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_select_transmitter"
        android:onClick="selectTransmitter" 
      />
      <TextView
        android:id="@+id/labelSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSelectTransmitter"
        android:layout_alignParentLeft="true"
        android:paddingRight="5dp"
        android:text="@string/label_selected_transmitter"
      />
      <TextView
        android:id="@+id/textSelectedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSelectTransmitter"
        android:layout_toRightOf="@id/labelSelected"
        android:text="@string/label_no_transmitter_selected"
      />
      <TextView
        android:id="@+id/textSelectedHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSelectedName"
        android:layout_toRightOf="@id/labelSelected"
        android:text="host"
      />
      <TextView
        android:id="@+id/textSelectedHostPortSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSelectedName"
        android:layout_toRightOf="@id/textSelectedHost"
        android:text=":"
      />
      <TextView
        android:id="@+id/textSelectedPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSelectedName"
        android:layout_toRightOf="@id/textSelectedHostPortSeparator"
        android:text="port"
      />
      <TextView
        android:id="@+id/labelBufferLengthMs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSelectedHost"
        android:layout_alignParentLeft="true"
        android:text="@string/label_buffer_length_ms"
      />
      <EditText
        android:id="@+id/editBufferLengthMs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSelectedHost"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/textSelectedHost"
        android:inputType="number"
        android:text="30"
      />
      <Button
        android:id="@+id/buttonStartStreaming"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBufferLengthMs"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/centerView"
        android:text="@string/button_start_streaming"
        android:onClick="startStreaming" 
      />
      <Button
        android:id="@+id/buttonStopStreaming"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBufferLengthMs"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonStartStreaming"
        android:text="@string/button_stop_streaming"
        android:onClick="stopStreaming" 
      />
      <TextView
        android:id="@+id/textLeftLevel"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonStartStreaming"
        android:layout_alignParentLeft="true"
        android:text="L"
      />
      <ProgressBar
        android:id="@+id/progressBarLeftLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonStartStreaming"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/textLeftLevel"
        android:layout_marginBottom="2dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/custom_progress_bar"
        android:animationResolution="20"
        android:max="128"
      />
      <TextView
        android:id="@+id/textRightLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLeftLevel"
        android:layout_alignLeft="@id/textLeftLevel"
        android:layout_alignRight="@id/textLeftLevel"
        android:text="R"
      />
      <ProgressBar
        android:id="@+id/progressBarRightLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarLeftLevel"
        android:layout_alignLeft="@id/progressBarLeftLevel"
        android:layout_alignRight="@id/progressBarLeftLevel"
        android:layout_marginBottom="2dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/custom_progress_bar"
        android:animationResolution="20"
        android:max="128"
      />
      <TextView
        android:id="@+id/textStreamStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarRightLevel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/label_not_streaming"
      />
    </RelativeLayout>
  </ScrollView>
</RelativeLayout>
